--- a/energy_appliances.ipynb
+++ b/energy_appliances.ipynb
@@ -33,7 +33,9 @@
     "library(tidyverse)\n",
     "library(tibble)\n",
     "library(lubridate)\n",
-    "\n",
+    "library(dplyr)\n",
+    "library(reshape2)\n",
+    "library(plotly)\n",
     "library(patchwork)"
    ]
   },
@@ -741,6 +743,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69dcb93-b31b-46f9-b937-a36cbcc732dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_data<-read.csv(\"energydata_complete.csv\")\n",
+    "energy_data$date <- strptime(as.character(energy_data$date),format=\"%Y-%m-%d %H:%M:%S\") \n",
+    "energy_data$date <- as.POSIXct(energy_data$date,tz = \"UTC\") \n",
+    "energy_data$mhr <- floor_date(energy_data$date,\"hour\")\n",
+    "energy_data$Day_of_week <- as.factor(energy_data$Day_of_week)\n",
+    "energy_data$WeekStatus <- unlist(lapply(energy_data$date, weekend_weekday))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8276aacb-577d-467d-9306-d34bc81c82c6",
    "metadata": {
@@ -752,7 +769,8 @@
     "1. Descriptive:\n",
     "* What is the average temperature variations of the house for the highest and the lowest energy consumption.\n",
     "* The temperature variations in all the rooms with time\n",
-    "2. Exploratory:\n"
+    "2. Exploratory:\n",
+    "* Detect the impact of temperature outside on the consumed energy on appliances"
    ]
   },
   {
@@ -1031,6 +1049,85 @@
     "From the above graph, we can conclude the below:\n",
     "* The maximum temperature outside is 15 degrees and the maximum temperature inside is 25 degrees\n",
     "* In all the rooms, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0546a370-c80b-4d7f-9b64-bedb8e850765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width=8, repr.plot.height=6)\n",
+    "temperature_subset <- select(energy_data, date, T2, T_out)\n",
+    "temperature_subset_melt <- melt(temperature_subset, id = c(\"date\"))\n",
+    "temperature_melt_subset <- subset(temperature_subset_melt, date > \"2016-01-10\" & date < \"2016-01-17\")\n",
+    "plot2 <- ggplot(temperature_melt_subset, aes(x = date, y = value, colour = variable)) +\n",
+    "  geom_line() +\n",
+    "  labs(title = \"TEMPERATURE INSIDE v/s OUTSIDE FOR JANUARY\") +\n",
+    "  theme_bw() +\n",
+    "  theme(text = element_text(size = 11, family = \"serif\")) +\n",
+    "  labs(y = \"TEMPERATURE (in Celius) \", x = \"JANUARY 1st WEEK\", col = \"SIDE\")\n",
+    "#plot2 <- ggplotly(plot2, width = 700, height = 350)\n",
+    "plot2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1383052a-568d-40bc-bd42-c29dccefeb52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_data$Day_of_week <- weekdays(energy_data$date)\n",
+    "weekend_weekday <- function(x) {\n",
+    "  val <- weekdays(x)\n",
+    "  if (val == \"Saturday\" | val == \"Sunday\") {\n",
+    "    val2 <- \"Weekend\"\n",
+    "  } else {\n",
+    "    val2 <- \"Weekday\"\n",
+    "  }\n",
+    "  return(val2)\n",
+    "}\n",
+    "energy_data$Day_of_week <- as.factor(energy_data$Day_of_week)\n",
+    "energy_data$WeekStatus <- unlist(lapply(energy_data$date, weekend_weekday))\n",
+    "data_weekstatus <- select(energy_data, date, WeekStatus, Appliances, mhr)\n",
+    "data_weekstatus$Appliances <- data_weekstatus$Appliances/1000\n",
+    "data_weekstatus_subset <- subset(data_weekstatus, date > \"2016-01-10\" & date < \"2016-01-17\")\n",
+    "options(repr.plot.width=8, repr.plot.height=6)\n",
+    "plot1 <- ggplot(data_weekstatus_subset, aes(x = date, y = Appliances, colour = WeekStatus)) +\n",
+    "  geom_line() +\n",
+    "  ylim(0, 1) +\n",
+    "  labs(title = \"WEEKDAY v/s WEEKEND ENERGY CONSUMED FOR JANUARY\") +\n",
+    "  theme_bw() +\n",
+    "  theme(text = element_text(size = 11, family = \"serif\")) +\n",
+    "  labs(y = \"APPLIANCE - energy use in KWh\", x = \"JANUARY 1st WEEK\", col = \"WEEKSTATUS\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96b04097-1814-4b3b-b4ab-d0d3fe0f98bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options(repr.plot.width=20, repr.plot.height=8)\n",
+    "plot1 + plot2 + plot_annotation(\n",
+    "  title = 'Impact of temperature outside on the consumed energy',theme = theme(plot.title = element_text(size = 25,face=\"bold\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a960f3d4-6773-42e6-a4eb-82f96603004f",
+   "metadata": {},
+   "source": [
+    "Detect the impact of temperature outside for the first week of January 2016 on the appliances energy consumed in order to maintain the temperature inside the living room of a house. The plots plotted are below:\n",
+    "\n",
+    "Left plot - Weekday v/s weekend energy consumed for January\n",
+    "\n",
+    "Right plot - Impact of outside temperature on the temperature of living room\n",
+    "\n",
+    "Comparison has been made for the weekdays and weekends consumed units of energy in Kwh during the winter season.\n"
    ]
   }
  ],
