--- a/energy_appliances.ipynb
+++ b/energy_appliances.ipynb
@@ -1,9 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "69d91af9-6b8f-4623-a82e-af22d7e63963",
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b9c6958b-4861-4e63-8ae3-ed2527f72640",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(ggplot2)\n",
+    "library(tidyverse)\n",
+    "library(tibble)\n",
+    "library(lubridate)\n",
+    "library(dplyr)\n",
+    "library(reshape2)\n",
+    "library(plotly)\n",
+    "library(patchwork)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "060c3e36-7818-4658-9a9a-dbe8b75627ec",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Step 1. Describe your data set:\n",
     "\n",
@@ -24,24 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "11bd86ec-48c4-4f2b-a0af-fce64c50c5ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(ggplot2)\n",
-    "library(tidyverse)\n",
-    "library(tibble)\n",
-    "library(lubridate)\n",
-    "library(dplyr)\n",
-    "library(reshape2)\n",
-    "library(plotly)\n",
-    "library(patchwork)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "cd1edb08-6649-4c5e-9e7c-b076926e700d",
    "metadata": {},
    "outputs": [],
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "75c40b09-7b8d-4d6b-aa02-aca52618f012",
    "metadata": {},
    "outputs": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "bbbbe2f8-9825-4796-a95d-27513cddf8c8",
    "metadata": {},
    "outputs": [
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
    "id": "69db82b3-5868-4739-949c-0b7fa3edd842",
    "metadata": {},
    "outputs": [
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 65,
    "id": "10928ba1-e225-4f17-b354-c79eb3610148",
    "metadata": {},
    "outputs": [
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "id": "8a4770c5-3e1e-4375-83cd-ff1cec7609a5",
    "metadata": {},
    "outputs": [
@@ -442,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "ae6d323d-4be2-4775-8e71-08be93f91a8d",
    "metadata": {},
    "outputs": [],
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "id": "4364477d-8b86-4e25-8bde-c4694b5efbde",
    "metadata": {},
    "outputs": [
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "id": "5d9f3fe4-1c5b-4d97-b229-d2dfc93b5e94",
    "metadata": {},
    "outputs": [],
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "id": "a0a32268-9d99-4cdb-b16d-8a17438c339e",
    "metadata": {},
    "outputs": [],
@@ -507,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "id": "d69dcb93-b31b-46f9-b937-a36cbcc732dd",
    "metadata": {},
    "outputs": [],
@@ -542,10 +544,10 @@
     "tags": []
    },
    "source": [
-    "## Step 6. Reasearch Question\n",
+    "## Step 6. Research Question\n",
     "\n",
     "1. Descriptive:\n",
-    "* What is the average temperature variations of the house for the highest and the lowest energy consumption.\n",
+    "* What is the average temperature variations in each room, for the highest and the lowest temperatures inside the house.\n",
     "* The temperature variations in all the rooms with time\n",
     "2. Exploratory:\n",
     "* Detect the impact of temperature outside on the consumed energy on appliances"
@@ -561,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "id": "f8168514-ebcd-46dd-bac7-80af1baca083",
    "metadata": {},
    "outputs": [],
@@ -591,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "id": "8b191642-13ea-4c78-8ea6-3bb877942767",
    "metadata": {},
    "outputs": [],
@@ -620,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "id": "17fab03f-f9b4-4fce-992b-f4decfd7a5a4",
    "metadata": {},
    "outputs": [
@@ -648,8 +650,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ae84dbc-7c16-4b37-8a4e-58a3a2848bbd",
+   "metadata": {},
+   "source": [
+    "* We can conclude from the above that, for a minimum temperature of 14.89 is found in the Parents room when the appliances energy consumption is 110 Wh.\n",
+    "* A maximum temperature of 29 degree is found in the living room and the appliances energy consumption is 180.Hence, the temperature of the house has increased as the energy consumption has increased."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "id": "b4755747-3c8d-443b-8415-71f7aea4a6a7",
    "metadata": {},
    "outputs": [],
@@ -660,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "id": "2dd3eeca-34b8-42c1-85bb-52a72c472680",
    "metadata": {},
    "outputs": [],
@@ -676,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "id": "ad463c62-e4c6-485c-aafe-025d550b4378",
    "metadata": {},
    "outputs": [],
@@ -692,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "id": "870c1125-7a35-4705-bab0-5e658f2d46a0",
    "metadata": {},
    "outputs": [],
@@ -708,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "id": "70842faa-132a-4ed7-8cd7-3f94de2ec8a5",
    "metadata": {},
    "outputs": [],
@@ -724,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "id": "7e7cc449-f30e-45e9-8c09-2605d48582bc",
    "metadata": {},
    "outputs": [],
@@ -740,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "id": "d1fe928c-30fe-417e-98f5-cfdcc84d54b4",
    "metadata": {},
    "outputs": [],
@@ -756,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "id": "0f3aeb84-7f1e-4929-a6f0-ec99074625aa",
    "metadata": {},
    "outputs": [],
@@ -772,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "id": "2d72674e-e6e1-482e-a6be-d97c00b710d0",
    "metadata": {},
    "outputs": [],
@@ -788,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "id": "55cc2c67-fa87-4ef5-b401-206156356982",
    "metadata": {},
    "outputs": [],
@@ -804,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "id": "eda8ecd3-8cc2-4287-ad7a-bc744ea7d312",
    "metadata": {},
    "outputs": [
@@ -843,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "id": "0546a370-c80b-4d7f-9b64-bedb8e850765",
    "metadata": {},
    "outputs": [],
@@ -862,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "id": "1383052a-568d-40bc-bd42-c29dccefeb52",
    "metadata": {},
    "outputs": [],
@@ -879,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "id": "96b04097-1814-4b3b-b4ab-d0d3fe0f98bb",
    "metadata": {},
    "outputs": [
@@ -912,13 +923,13 @@
    "source": [
     "## Step 8. Summary and Conclusions\n",
     "\n",
-    "Detect the impact of temperature outside for the first week of January 2016 on the appliances energy consumed in order to maintain the temperature inside the living room of a house. The plots plotted are below:\n",
+    "* Detect the impact of temperature outside for the first week of January 2016 on the appliances energy consumed in order to maintain the temperature inside the living room of a house. The plots plotted are below:\n",
     "\n",
-    "Left plot - Weekday v/s weekend energy consumed for January\n",
+    "* Left plot - Weekday v/s weekend energy consumed for January\n",
     "\n",
-    "Right plot - Impact of outside temperature on the temperature of living room\n",
+    "* Right plot - Impact of outside temperature on the temperature of living room\n",
     "\n",
-    "Comparison has been made for the weekdays and weekends consumed units of energy in Kwh during the winter season.\n"
+    "* Comparison has been made for the weekdays and weekends consumed units of energy in Kwh during the winter season.\n"
    ]
   }
  ],
